[package]
name = "vdownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
futures-util = "0.3.31"
indicatif = "0.18.0"
log = "0.4.27"
reqwest ={version = "*", features = ["stream"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }
